<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrarActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="Modificar Pelicula"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nombreET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/hnt_nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/descET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/hnt_desc"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/generoET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/hnt_genero"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ratingET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/hnt_rating"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btn_modificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="25dp"
            android:hint="@string/btn_modificar"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_eliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="25dp"
            android:hint="@string/btn_eliminar"
            android:textSize="25sp" />
    </LinearLayout>